5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1643_2703.log
== TEST (2019-04-08 13:09:55) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18)
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (a>18)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:10:41) 
-- CODE:
a=int(input("numero inteiro:"))

if (a=>18)
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (a=>18)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:10:41) 
-- CODE:
a=int(input("numero inteiro:"))

if (a=>18)
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.125719
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 3
    if (a=>18)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:11:40) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>0) (a>=0) (a<0)
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (a>0) (a>=0) (a<0)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:21:44) 
-- CODE:
a=int(input("numero inteiro:"))

if (<180):
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 3
    if (<180):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:21:53) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:22:09) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.138022
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:22:15) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:22:26) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.177318
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:23:16) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:23:27) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.139734
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:31:13) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:31:34) 
-- CODE:
a=int(input("numero inteiro:"))

if (18<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:32:46) 
-- CODE:
a=int(input("numero inteiro:"))

if (0<18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:33:07) 
-- CODE:
a=int(input("numero inteiro:"))

if (0>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:33:11) 
-- CODE:
a=int(input("numero inteiro:"))

if (0>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:33:23) 
-- CODE:
a=int(input("numero inteiro:"))

if (0>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.196057
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:33:59) 
-- CODE:
a=int(input("numero inteiro:"))

if (0>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:34:36) 
-- CODE:
a=int(input("numero inteiro:"))

if (0>=18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:35:39) 
-- CODE:
a=int(input("numero inteiro:"))

if (18>0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:35:54) 
-- CODE:
a=int(input("numero inteiro:"))

if (18>0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:36:10) 
-- CODE:
a=int(input("numero inteiro:"))

if (18>0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:36:18) 
-- CODE:
a=int(input("numero inteiro:"))

if (18>0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:36:39) 
-- CODE:
a=int(input("numero inteiro:"))

if (18==0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:36:48) 
-- CODE:
a=int(input("numero inteiro:"))

if (18==0):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.258894
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:36:56) 
-- CODE:
a=int(input("numero inteiro:"))

if (18==0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:46:24) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:46:36) 
-- CODE:
a=int(input("numero inteiro:"))

if (a<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:46:41) 
-- CODE:
a=int(input("numero inteiro:"))

if (a<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:46:53) 
-- CODE:
a=int(input("numero inteiro:"))

if (a<0):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.153874
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:48:08) 
-- CODE:
a=int(input("numero inteiro:"))

if (a<18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:48:20) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:48:27) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.192232
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:05:52) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.167304
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:20:38) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.178273
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:20:39) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:20:48) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:25:34) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.185077
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:57:11) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.148109
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:23:06) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:23:14) 
-- CODE:
a=int(input("numero inteiro:"))

if (a>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.128398
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
